--- a/similarity_search/2-1.RAG_DOC.ipynb
+++ b/similarity_search/2-1.RAG_DOC.ipynb
@@ -5,7 +5,9 @@
    "id": "d53c0a2b-17f9-44d4-baf4-4c532c20d846",
    "metadata": {},
    "source": [
-    "### RAG 시나리오(문서)\n",
+    "## RAG 시나리오(문서)\n",
+    "이 데모는 RAG와 RAG 없는 경우를 비교하는 데모임.\n",
+    "LLM 서비스는 로컬 Ollama 서비스, LLAMA3.2 2b와 lanchain 프롬프트를 사용합니다. \n",
     "1. 시나리오1: LLM에 직접 질문&답.\n",
     "2. 시나리오2(RAG): DB 데이터의 벡터검색 결과를 LLM이 참조하는 답변.\n",
     "3. 2개의 시나리오 결과를 비교해보세요 "
@@ -21,14 +23,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "633d75c8-8754-426b-b860-dafd3f08d515",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/jupyterhub/vector_env/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PRODUCT</th>\n",
+       "      <th>VERSION_FULL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Oracle AI Database 26ai Free</td>\n",
+       "      <td>23.26.0.0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        PRODUCT VERSION_FULL\n",
+       "0  Oracle AI Database 26ai Free  23.26.0.0.0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 파이썬 라이브러리 로딩 및 오라클 DB 접속\n",
     "import oracledb,oml\n",
@@ -55,27 +108,86 @@
    "metadata": {},
    "source": [
     "### 1. RAG DB 데이터 준비\n",
-    "1. 문서->텍스트 추출->청킹->임베딩 실행\n",
-    "2. 임베딩 정보를 테이블에 저장, 벡터 인덱싱 생성"
+    "1. 문서(소프트웨어분리발주메뉴얼)->텍스트 추출->청킹->임베딩 실행\n",
+    "2. 임베딩 정보를 테이블(rag_tbl_v)에 저장, 벡터 인덱싱 생성"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f213dfd8-33d7-4b1f-8fbb-24568b68b776",
+   "metadata": {},
+   "source": [
+    "### 참고 : 시나리오에 사용할 문서"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "47d5c408-1cab-4556-b370-22bc9ea99d4b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href='./data/doc/rag/소프트웨어_분리발주_매뉴얼_개정배포_16.7.pdf' target='_blank'>./data/doc/rag/소프트웨어_분리발주_매뉴얼_개정배포_16.7.pdf</a><br>"
+      ],
+      "text/plain": [
+       "/home/labadmin/labs/vector/similarity_search/data/doc/rag/소프트웨어_분리발주_매뉴얼_개정배포_16.7.pdf"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# pdf 문서(소프트웨어 분리발주 매뉴얼)디스플레이\n",
+    "import os\n",
+    "from IPython.display import FileLink\n",
+    "img_dir = \"./data/doc/rag/\"  \n",
+    "img_file = \"소프트웨어_분리발주_매뉴얼_개정배포_16.7.pdf\" \n",
+    "img_path = os.path.join(img_dir, img_file)\n",
+    "\n",
+    "display(FileLink(img_path))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fee1a64-37db-4dcc-bb7c-9fd51b9ea2c0",
+   "metadata": {},
+   "source": [
+    "### 임베딩 및 인덱싱\n",
+    "문서 테이블(rag_tbl), 청킹 및 벡터 저장 테이블(rag_tbl_v), 인덱싱(HNSW)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "9e3716f5-7727-4c0b-8a56-42f15c880b91",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "테이블이 정리 됐습니다\n",
+      "임베딩 및 인덱싱을 진행중입니다 ......\n",
+      "임베딩 완료 시간 : 31.806585550308228\n",
+      "인덱싱 완료\n",
+      "벡터 데이터 준비가 됐습니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# 벡터 테이블 정리\n",
     "dr_tbl = \"\"\"truncate table rag_tbl_v \"\"\"\n",
     "ddl_sql(cursor,dr_tbl)\n",
     "print(\"테이블이 정리 됐습니다\")\n",
     "\n",
-    "# 문서에서 텍스트 추출 및 청킹\n",
+    "# 테이블 저장 문서에서 텍스트 추출 및 청킹\n",
     "# 임베딩 및 인덱싱\n",
     "print(\"임베딩 및 인덱싱을 진행중입니다 ......\")\n",
     "cr_tbl = \"\"\"\n",
@@ -126,17 +238,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "643ed833-e525-4722-8e26-17b18d4dcaac",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "공통질문 : 공공기관 분리발주 대상 소프트웨어들은 어떤 것들이 있나요?\n"
+     ]
+    }
+   ],
    "source": [
     "# 공통 질문\n",
-    "user_q = \"공공기관 분리발주 대상 소프트웨어는 어떤것들이 있나요?\"\n",
+    "user_q = \"공공기관 분리발주 대상 소프트웨어들은 어떤 것들이 있나요?\"\n",
     "print(\"공통질문 :\",user_q)"
    ]
   },
@@ -147,19 +265,38 @@
    "source": [
     "### 2. LLM 질의 답변 경우\n",
     "- LLM : LLAMA3.2\n",
-    "- 질문은 별도 자료 제공없이 질문합니다."
+    "- LLM에 보강 프롬프트없이 질문합니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "31715965-6863-479b-92ff-185675079645",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LLAMA3.2에 질문 :  공공기관 분리발주 대상 소프트웨어들은 어떤 것들이 있나요?  에 대한 답변을 준비중입니다......\n",
+      "LLAMA3.2가 학습된 정보를 기초로 답변한 내용은 다음과 같습니다.\n",
+      "---------------------------------------------------------------------\n",
+      "공공기관 분리발주 대상 소프트웨어는 공공기관이 필요하는 서비스를 제공할 수 있는 소프트웨어입니다. 다음과 같은 예가 있습니다.\n",
+      "\n",
+      "1. 의료 정보 시스템 (EHR): 의사당에서 사용되는 의학信息시스템을 개발하기 위해 필요한 소프트웨어입니다.\n",
+      "2. 자치구 정보시스템: 지방자치단결형의 자치구가 필요하는 정보시스템을 개발하기 위해 필요한 소프트웨어입니다.\n",
+      "3. 통신망 시스템: 공공기관이 필요한 통신망 시스템을 개발하기 위해 필요한 소프트웨어입니다.\n",
+      "4. 인사 관리 시스템 (HRMS): 공공기관에서 사용되는 인사 관리 시스템을 개발하기 위해 필요한 소프트WARE입니다.\n",
+      "5. مالی información 시스템: 공공기관이 nécess하는 finanzi적인 정보를 수집하고 관리하기위한 시스템을 개발하기 위해 필요한 소프트웨어입니다.\n",
+      "\n",
+      "위의 예는 공공기관 분리발주 대상 소프트웨어의 일반적인 예입니다. 공공기관은 다양한need에 따라 소프트웨어를 필요로 할 수 있으므로, 이 목록은 완전하지 않습니다.\n",
+      "---------------------------------------------------------------------\n",
+      "실행 시간 : 18.47319483757019\n"
+     ]
+    }
+   ],
    "source": [
     "# LLM(llama3.2) 질의 응답\n",
     "# Oracle's API for ollama\n",
@@ -182,35 +319,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f213dfd8-33d7-4b1f-8fbb-24568b68b776",
-   "metadata": {},
-   "source": [
-    "### 참고 : 시나리오에 사용할 문서"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47d5c408-1cab-4556-b370-22bc9ea99d4b",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# pdf 문서(소프트웨어 분리발주 매뉴얼)디스플레이\n",
-    "import os\n",
-    "from IPython.display import FileLink\n",
-    "img_dir = \"./data/doc/rag/\"  \n",
-    "img_file = \"소프트웨어_분리발주_매뉴얼_개정배포_16.7.pdf\" \n",
-    "img_path = os.path.join(img_dir, img_file)\n",
-    "\n",
-    "display(FileLink(img_path))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6d23b53d-e8a4-4e6c-83c8-c762d8f8df5f",
    "metadata": {},
    "source": [
@@ -221,15 +329,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "518468b5-1bbe-4222-bdf4-56cd39a07818",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "공공기관 분리발주 대상 소프트웨어들은 어떤 것들이 있나요? 에 대한 답변을 DB문서를 참조해서 답변을 준비중입니다......\n",
+      "벡터쿼리 실행 시간  0.01801013946533203\n",
+      "프롬프트 \n",
+      " \n",
+      "Context 정보만를 이용해서 답변해주세요.\n",
+      "'답변'과'참조문서'로 구분해서 답변해주세요.답변 작성시 친숙한 어조로 작성해주세요.\n",
+      "'답변'은 500자 이내로 요약 정리해주세요. '참조문서'에는 context의 '문서명'과 '청크ID'를 명시해주세요.\n",
+      "CONTEXT : {context}\n",
+      "[INST]QUESTION : {question}[/INST]\n",
+      "\n",
+      "langchain-ollama 프롬프트를 생성하였고, LLAMA3.2가 답변을 생성중입니다.......\n",
+      "LLM 답변 생성시간 :  23.97117805480957\n",
+      "-----------------------------------------------------------------------------------\n",
+      "**답변**\n",
+      "\n",
+      "분리발주 대상 소프트웨어는 공공기관이 필요로 하는 소프트웨어를 의미합니다. 이 중에서 공공기관이 필요로 하는 소프트웨어의 종류는 다음과 같습니다.\n",
+      "\n",
+      "1.  **인터넷 및 네트워크 소프트웨어**: 공공기관은 인터넷과 네트워크를 사용하여 업무를 수행해야 합니다. 따라서 인터넷 및 네트워크 소프트웨어가 분리발주 대상 소프트웨어 중 하나입니다.\n",
+      "2.  **데이터 분석 및 처리 소프트웨어**: 공공기관은 데이터를 수집, 분석, 처리해야 합니다. 따라서 데이터 분석 및 처리 소프트웨어가 분리발주 대상 소프트WARE 중 하나입니다.\n",
+      "3.  **보안 소프트웨어**: 공공기관은 보안을 중요하게 생각해야 합니다. 따라서 보안 소프트웨어가 분리발주 대상 소프트웨어 중 하나입니다.\n",
+      "4.  **소프트웨어 개발 및 유지 관리 소프트웨어**: 공공기관은 소프트웨어를 개발, 유지 관리해야 합니다. 따라서 소프트웨어 개발 및 유지 관리 소프트웨어가 분리발주 대상 소프트웨어 중 하나입니다.\n",
+      "\n",
+      "이러한 소프트웨어는 공공기관의 업무에 필요한 소프트웨어로, 분리발주 대상 소프트웨어 중 하나입니다.\n",
+      "\n",
+      "**참조문서**\n",
+      "\n",
+      "*   **문서명**: \"분리발주 대상 소프트웨어\"\n",
+      "*   **청크ID**: 3\n",
+      "-----------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# 사용자 지정 문서를 참조한 RAG 답변\n",
     "\n",
@@ -272,7 +413,7 @@
     "CONTEXT : {context}\n",
     "[INST]QUESTION : {question}[/INST]\n",
     "\"\"\"\n",
-    "print(\"프로프트 \\n\", template)\n",
+    "print(\"프롬프트 \\n\", template)\n",
     "\n",
     "prompt = ChatPromptTemplate.from_template(template)\n",
     "print(\"langchain-ollama 프롬프트를 생성하였고, LLAMA3.2가 답변을 생성중입니다.......\")\n",
@@ -301,14 +442,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "260e8a7d-db71-4727-a57e-053cf329fcfb",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_67abe th {\n",
+       "  text-align: left;\n",
+       "}\n",
+       "#T_67abe_row0_col0, #T_67abe_row0_col1, #T_67abe_row0_col2, #T_67abe_row1_col0, #T_67abe_row1_col1, #T_67abe_row1_col2, #T_67abe_row2_col0, #T_67abe_row2_col1, #T_67abe_row2_col2 {\n",
+       "  text-align: left;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_67abe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_67abe_level0_col0\" class=\"col_heading level0 col0\" >문서번호</th>\n",
+       "      <th id=\"T_67abe_level0_col1\" class=\"col_heading level0 col1\" >청크ID</th>\n",
+       "      <th id=\"T_67abe_level0_col2\" class=\"col_heading level0 col2\" >문서내용</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_67abe_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_67abe_row0_col0\" class=\"data row0 col0\" >3</td>\n",
+       "      <td id=\"T_67abe_row0_col1\" class=\"data row0 col1\" >176</td>\n",
+       "      <td id=\"T_67abe_row0_col2\" class=\"data row0 col2\" >▣\n",
+       "\n",
+       "「분리발주 대상 소프트웨어」(미래창조과학부 고시)\n",
+       "\n",
+       "제\n",
+       "\n",
+       "3조(분리발주 대상 소프트웨어)\n",
+       "\n",
+       "\n",
+       "\n",
+       "⑤국가,지방자치단체,국가또는지방자치단체가투자하거나출연한법인또는\n",
+       "\n",
+       "그밖의공공단체등(이하\"국가기관등\"이라\n",
+       "\n",
+       "한다)의장은분리발주대상소프트웨어가제1항제1호에따른국가종합</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_67abe_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_67abe_row1_col0\" class=\"data row1 col0\" >3</td>\n",
+       "      <td id=\"T_67abe_row1_col1\" class=\"data row1 col1\" >176</td>\n",
+       "      <td id=\"T_67abe_row1_col2\" class=\"data row1 col2\" >▣\n",
+       "\n",
+       "「분리발주 대상 소프트웨어」(미래창조과학부 고시)\n",
+       "\n",
+       "제\n",
+       "\n",
+       "3조(분리발주 대상 소프트웨어)\n",
+       "\n",
+       "\n",
+       "\n",
+       "⑤국가,지방자치단체,국가또는지방자치단체가투자하거나출연한법인또는\n",
+       "\n",
+       "그밖의공공단체등(이하\"국가기관등\"이라\n",
+       "\n",
+       "한다)의장은분리발주대상소프트웨어가제1항제1호에따른국가종합</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_67abe_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_67abe_row2_col0\" class=\"data row2 col0\" >3</td>\n",
+       "      <td id=\"T_67abe_row2_col1\" class=\"data row2 col1\" >296</td>\n",
+       "      <td id=\"T_67abe_row2_col2\" class=\"data row2 col2\" >미래창조과학부고시 제2015-107호\n",
+       "\n",
+       "「소프트웨어산업\n",
+       "\n",
+       "진흥법」제20조제2항에\n",
+       "\n",
+       "따른 「분리발주\n",
+       "\n",
+       "대상 소프트웨어(미래창조과학부고시\n",
+       "\n",
+       "제2014-80호)」전부를 개정하고, 다음과 같이 고시합니다.\n",
+       "\n",
+       "2015년 12월 28일\n",
+       "\n",
+       "미래창조과학부장관\n",
+       "\n",
+       "분리발주 대상 소프트웨어\n",
+       "\n",
+       "제\n",
+       "\n",
+       "1조(목적)\n",
+       "\n",
+       "이\n",
+       "\n",
+       "고시는\n",
+       "\n",
+       "소프트웨어산업\n",
+       "\n",
+       "진흥법\n",
+       "\n",
+       "제20조제2항에\n",
+       "\n",
+       "따라\n",
+       "\n",
+       "국가,\n",
+       "\n",
+       "지방자치단체,\n",
+       "\n",
+       "국가\n",
+       "\n",
+       "또는\n",
+       "\n",
+       "지방\n",
+       "\n",
+       "자치단체가\n",
+       "\n",
+       "투자하거나\n",
+       "\n",
+       "출연한\n",
+       "\n",
+       "법인\n",
+       "\n",
+       "또는\n",
+       "\n",
+       "그\n",
+       "\n",
+       "밖의\n",
+       "\n",
+       "공공단체\n",
+       "\n",
+       "등의\n",
+       "\n",
+       "장이\n",
+       "\n",
+       "소프트웨어를\n",
+       "\n",
+       "분리발주하는\n",
+       "\n",
+       "경우 세부적인 대상 및 방법 등을 정하는 것을 목적으로 한다.\n",
+       "\n",
+       "제\n",
+       "\n",
+       "2조(분리발주 대상 사업)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f72a38faf00>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 벡터 검색 결과\n",
     "display(\n",
