--- a/similarity_search/1-1.simsearch_doc.ipynb
+++ b/similarity_search/1-1.simsearch_doc.ipynb
@@ -89,8 +89,8 @@
     "from user_functions import get_conn_cursor, get_db_version, exec_sql, dml_sql, ddl_sql, clean_text\n",
     "\n",
     "# DB 접속\n",
-    "user_id = 'labadmin'\n",
-    "pwd = 'labadmin'\n",
+    "user_id = 'id'\n",
+    "pwd = 'password'\n",
     "dbconn = 'dbserver26ai:1521/freepdb1'\n",
     "\n",
     "conn, cursor = get_conn_cursor(user_id,pwd,dbconn)\n",
