--- a/ONNX/4.1_export_ONNX.ipynb
+++ b/ONNX/4.1_export_ONNX.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "62edb0a0-fa85-4455-8445-df7d070dd538",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/jupyterhub/vector_env/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -17,13 +25,13 @@
    "source": [
     "# 오라클DB 접속\n",
     "import oml\n",
-    "#import oracledb\n",
-    "#oml.core.methods.__embed__ = False\n",
+    "import oracledb\n",
+    "oml.core.methods.__embed__ = False\n",
     "\n",
-    "#connection = oracledb.connect(user=\"labadmin\", password=\"labadmin\", dsn=\"dbserver26ai:1521/freepdb1\")\n",
-    "#cursor = connection.cursor()\n",
-    "oml.connect(user=\"labadmin\", password=\"labadmin\", dsn=\"dbserver26ai:1521/freepdb1\")\n",
-    "cursor = oml.cursor()\n",
+    "connection = oracledb.connect(user=\"labadmin\", password=\"labadmin\", dsn=\"dbserver26ai:1521/freepdb1\")\n",
+    "cursor = connection.cursor()\n",
+    "#oml.connect(user=\"labadmin\", password=\"labadmin\", dsn=\"dbserver26ai:1521/freepdb1\")\n",
+    "#cursor = oml.cursor()\n",
     "# 버전 확인\n",
     "dbversion = \"\"\"select product,VERSION_FULL from product_component_version\"\"\"\n",
     "result=cursor.execute(dbversion).fetchall()\n",
@@ -32,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f5d04823-00cc-48c5-8b78-4ced40cfdec7",
    "metadata": {},
    "outputs": [
@@ -74,7 +82,7 @@
        " 'BAAI/bge-reranker-base']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fce14995-ce18-4806-93e7-9ca78146f104",
    "metadata": {},
    "outputs": [
@@ -108,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "[('ALL_MINILM_L6_V2', 'EMBEDDING', 'ONNX', 'NATIVE', 86.43770408630371), ('CLIP_VIT_LARGE_PATCH14_IMG', 'EMBEDDING', 'ONNX', 'NATIVE', 292.1818504333496), ('CLIP_VIT_LARGE_PATCH14_TXT', 'EMBEDDING', 'ONNX', 'NATIVE', 119.93346118927002), ('MULTILINGUAL_E5_SMALL', 'EMBEDDING', 'ONNX', 'NATIVE', 117.3783826828003), ('VIT_BASE_PATCH16_224', 'EMBEDDING', 'ONNX', 'NATIVE', 327.6180763244629)]\n"
      ]
     }
    ],
@@ -122,27 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "78039748-c0dc-4eff-aa38-737115ee9ec5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model removed\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 데모 초기화(ONNX 모델 삭제)\n",
     "cursor.execute(\"BEGIN DBMS_VECTOR.DROP_ONNX_MODEL(model_name => 'VIT_BASE_PATCH16_224', force => true); END;\")\n",
@@ -153,25 +144,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "accce91e-6d76-4ff7-b342-9ea243029fbf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UserWarning:Batch inference not supported in quantized models. Setting batch size to 1.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "complete export2file\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pretrained & preconfig ONNX 모델 다운로드 \n",
     "config   = ONNXPipelineConfig.from_template(\"text\", max_seq_length=256,\n",
@@ -183,25 +159,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "15f7f897-1d50-4902-b6ed-88c177e3fc06",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UserWarning:Batch inference not supported in quantized models. Setting batch size to 1.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded complete the model\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Direct loading a Text embedding ONNX 모델 - intfloat/multilingual-e5-small\n",
     "pipeline = ONNXPipeline(model_name=\"intfloat/multilingual-e5-small\")\n",
@@ -211,18 +172,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ddc357f4-8147-4295-bdae-b379bc5e51cd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded complete the model\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Direct loading a Text embedding ONNX 모델\n",
     "pipeline = ONNXPipeline(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
@@ -271,26 +224,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c4cc6ec1-19ca-49cc-9e72-0331d25cf889",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TracerWarning:Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
-      "TracerWarning:Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded complete the model\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Direct loading a image ONNX 모델 - google/vit-base-patch16-224\n",
     "pipeline = ONNXPipeline(model_name=\"google/vit-base-patch16-224\")\n",
@@ -300,30 +237,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d0f40f70-3e1a-41e9-a52c-1a1c125ceb4a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TracerWarning:Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
-      "TracerWarning:Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
-      "TracerWarning:Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
-      "UserWarning:Exporting aten::index operator of advanced indexing in opset 17 is achieved by combination of multiple ONNX operators, including Reshape, Transpose, Concat, and Gather. If indices include negative values, the exported graph will produce incorrect results.\n",
-      "UserWarning:Batch inference not supported in quantized models. Setting batch size to 1.\n",
-      "TracerWarning:Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded complete the model\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Direct loading a image ONNX 모델 - openai/clip-vit-large-patch14\n",
     "pipeline = ONNXPipeline(model_name=\"openai/clip-vit-large-patch14\")\n",
@@ -361,41 +278,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8709f162-8da5-4f0a-99c9-617e85886f7d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'In DB ONNX models'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('ALL_MINILM_L6_V2', 'EMBEDDING', 'ONNX', 'NATIVE', 86.43770408630371),\n",
-       " ('CLIP_VIT_LARGE_PATCH14_IMG',\n",
-       "  'EMBEDDING',\n",
-       "  'ONNX',\n",
-       "  'NATIVE',\n",
-       "  292.1818504333496),\n",
-       " ('CLIP_VIT_LARGE_PATCH14_TXT',\n",
-       "  'EMBEDDING',\n",
-       "  'ONNX',\n",
-       "  'NATIVE',\n",
-       "  119.93346118927002),\n",
-       " ('MULTILINGUAL_E5_SMALL', 'EMBEDDING', 'ONNX', 'NATIVE', 117.3783826828003),\n",
-       " ('VIT_BASE_PATCH16_224', 'EMBEDDING', 'ONNX', 'NATIVE', 327.6180763244629)]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# DB관리중인 ONNX 모델 조회\n",
     "\n",
@@ -414,9 +300,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.12 (Embedding Shared)",
    "language": "python",
-   "name": "python3"
+   "name": "embed-python"
   },
   "language_info": {
    "codemirror_mode": {
