--- a/similarity_search/1-1.simsearch_doc.ipynb
+++ b/similarity_search/1-1.simsearch_doc.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "df87e569-e855-467c-b010-d40078ae11bd",
    "metadata": {
     "tags": []
@@ -74,7 +74,7 @@
        "0  Oracle AI Database 26ai Free  23.26.0.0.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,8 +89,8 @@
     "from user_functions import get_conn_cursor, get_db_version, exec_sql, dml_sql, ddl_sql, clean_text\n",
     "\n",
     "# DB 접속\n",
-    "user_id = 'id'\n",
-    "pwd = 'password'\n",
+    "user_id = 'labadmin'\n",
+    "pwd = 'labadmin'\n",
     "dbconn = 'dbserver26ai:1521/freepdb1'\n",
     "\n",
     "conn, cursor = get_conn_cursor(user_id,pwd,dbconn)\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "92502dcf-d367-4a1d-8386-787084c6dbaa",
    "metadata": {
     "tags": []
@@ -285,7 +285,7 @@
        "15  20-4    행정안정부    20250720                 호우 피해지역 가전제품 무상수리팀 운영"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c004f8da-493b-4c88-b8de-67b1b16a555f",
    "metadata": {
     "tags": []
@@ -384,14 +384,6 @@
        "      <td>NATIVE</td>\n",
        "      <td>117.378383</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>VIT_BASE_PATCH16_224</td>\n",
-       "      <td>EMBEDDING</td>\n",
-       "      <td>ONNX</td>\n",
-       "      <td>NATIVE</td>\n",
-       "      <td>327.618076</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -402,17 +394,15 @@
        "1  CLIP_VIT_LARGE_PATCH14_IMG       EMBEDDING      ONNX         NATIVE   \n",
        "2  CLIP_VIT_LARGE_PATCH14_TXT       EMBEDDING      ONNX         NATIVE   \n",
        "3       MULTILINGUAL_E5_SMALL       EMBEDDING      ONNX         NATIVE   \n",
-       "4        VIT_BASE_PATCH16_224       EMBEDDING      ONNX         NATIVE   \n",
        "\n",
        "           MB  \n",
        "0   86.437704  \n",
        "1  292.181850  \n",
        "2  119.933461  \n",
-       "3  117.378383  \n",
-       "4  327.618076  "
+       "3  117.378383  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "40686a4f-7b9a-4510-8d46-560154a80079",
    "metadata": {
     "tags": []
@@ -453,7 +443,7 @@
        "'complete commit for DML'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a83f32cf-30d4-4dd5-bc73-c84cac9f800c",
    "metadata": {
     "tags": []
@@ -485,7 +475,7 @@
        "'complete commit for DML'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "1b222867-64e3-49f7-8743-9716632488b5",
    "metadata": {
     "tags": []
@@ -563,35 +553,35 @@
        "      <td>10-3</td>\n",
        "      <td>1</td>\n",
        "      <td>보도시점2025. 7. 17.(목) 16:00배포2025. 7. 17.(목) 14:00하반기 관세대응 수출금융 설명회 개최-원스톱 수출･수주지원단, 6개 정책금융기관과 수출...</td>\n",
-       "      <td>[0.05353277921676636, -0.042318545281887054, -0.011556113138794899, -0.05086055397987366, 0.0252...</td>\n",
+       "      <td>[0.05357242375612259, -0.04515943303704262, -0.019711287692189217, -0.05753738433122635, 0.01897...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10-3</td>\n",
        "      <td>2</td>\n",
        "      <td>보험공사, 중소벤처기업진흥공단, 신용보증기금, 기술보증기금, IBK기업은행)와 140여개기업이 참석했다.이번 설명회는 통상환경 변화에 따른 수출기업의 금융 수요 증가에 대응...</td>\n",
-       "      <td>[0.07883216440677643, -0.0810764729976654, -0.03485460579395294, -0.04429081082344055, 0.0536184...</td>\n",
+       "      <td>[0.0806475579738617, -0.08076319843530655, -0.034652817994356155, -0.040315087884664536, 0.05231...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>10-3</td>\n",
        "      <td>3</td>\n",
        "      <td>등 미국 관세대응에 필요한 자금지원 방안도 종합적으로 안내되었다.지원단은 앞으로도 우리 수출기업들이 美 통상정책의 불확실성에 신속하고 유연하게 대응할 수 있도록 통합적인 정...</td>\n",
-       "      <td>[0.0665583536028862, -0.053457293659448624, -0.03846992179751396, -0.04731251671910286, 0.067271...</td>\n",
+       "      <td>[0.06704176962375641, -0.05345768854022026, -0.04184648394584656, -0.04560878127813339, 0.066656...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>10-3</td>\n",
        "      <td>4</td>\n",
        "      <td>ㅇ6개정책금융기관*이공동으로참여하는수출금융설명회로,기업수요에맞는금융지원정보를효율적‧유기적으로제공* 수출입은행, 무역보험공사, 중소벤처기업진흥공단, 신용보증기금, 기술보증기금...</td>\n",
-       "      <td>[0.03929511085152626, -0.03999074921011925, 0.0010063893860206008, -0.04360365867614746, 0.05550...</td>\n",
+       "      <td>[0.038000114262104034, -0.03872048109769821, -0.0016117814229801297, -0.04711392894387245, 0.052...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>10-3</td>\n",
        "      <td>5</td>\n",
        "      <td>(10분)인사말씀 및 행사순서 안내무역협회14:10~16:10(120분)기관별 주요 지원사업 소개(기관당 20분: 발표 10분, Q&amp;A 10분)*➊수출입은행 →➋무역보험공사...</td>\n",
-       "      <td>[0.035983648151159286, -0.05269879847764969, -0.025664664804935455, -0.0417376309633255, 0.06079...</td>\n",
+       "      <td>[0.03420785814523697, -0.04939469322562218, -0.02717416174709797, -0.04586814343929291, 0.056738...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -613,11 +603,11 @@
        "4  (10분)인사말씀 및 행사순서 안내무역협회14:10~16:10(120분)기관별 주요 지원사업 소개(기관당 20분: 발표 10분, Q&A 10분)*➊수출입은행 →➋무역보험공사...   \n",
        "\n",
        "                                                                                          EMBED_VECTOR  \n",
-       "0  [0.05353277921676636, -0.042318545281887054, -0.011556113138794899, -0.05086055397987366, 0.0252...  \n",
-       "1  [0.07883216440677643, -0.0810764729976654, -0.03485460579395294, -0.04429081082344055, 0.0536184...  \n",
-       "2  [0.0665583536028862, -0.053457293659448624, -0.03846992179751396, -0.04731251671910286, 0.067271...  \n",
-       "3  [0.03929511085152626, -0.03999074921011925, 0.0010063893860206008, -0.04360365867614746, 0.05550...  \n",
-       "4  [0.035983648151159286, -0.05269879847764969, -0.025664664804935455, -0.0417376309633255, 0.06079...  "
+       "0  [0.05357242375612259, -0.04515943303704262, -0.019711287692189217, -0.05753738433122635, 0.01897...  \n",
+       "1  [0.0806475579738617, -0.08076319843530655, -0.034652817994356155, -0.040315087884664536, 0.05231...  \n",
+       "2  [0.06704176962375641, -0.05345768854022026, -0.04184648394584656, -0.04560878127813339, 0.066656...  \n",
+       "3  [0.038000114262104034, -0.03872048109769821, -0.0016117814229801297, -0.04711392894387245, 0.052...  \n",
+       "4  [0.03420785814523697, -0.04939469322562218, -0.02717416174709797, -0.04586814343929291, 0.056738...  "
       ]
      },
      "metadata": {},
@@ -655,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "a06b6bc8-f4d1-4805-84cf-ecd6de375464",
    "metadata": {
     "tags": []
@@ -710,7 +700,7 @@
        "0  INMEMORY_NEIGHBOR_GRAPH_HNSW  VALID  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "05539a3a-040c-496c-a74a-7bc1aea39da7",
    "metadata": {
     "tags": []
@@ -763,43 +753,43 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "찾으실 문장을 입력하세요: 지원단은 앞으로도 우리 수출기업들이 美 통상정책의 불확실성에 대응\n"
+      "찾으실 문장을 입력하세요: 출기업들 美 통상정책의 불확실성 유연하게 들어간 파일 찾아줘\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_ae4e6 th {\n",
+       "#T_3401b th {\n",
        "  text-align: left;\n",
        "}\n",
-       "#T_ae4e6_row0_col0, #T_ae4e6_row0_col1, #T_ae4e6_row0_col2, #T_ae4e6_row0_col3 {\n",
+       "#T_3401b_row0_col0, #T_3401b_row0_col1, #T_3401b_row0_col2, #T_3401b_row0_col3 {\n",
        "  text-align: left;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_ae4e6\">\n",
+       "<table id=\"T_3401b\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_ae4e6_level0_col0\" class=\"col_heading level0 col0\" >DOCNO</th>\n",
-       "      <th id=\"T_ae4e6_level0_col1\" class=\"col_heading level0 col1\" >DOC_NAME</th>\n",
-       "      <th id=\"T_ae4e6_level0_col2\" class=\"col_heading level0 col2\" >CHUNKED_ID</th>\n",
-       "      <th id=\"T_ae4e6_level0_col3\" class=\"col_heading level0 col3\" >문서내용</th>\n",
+       "      <th id=\"T_3401b_level0_col0\" class=\"col_heading level0 col0\" >DOCNO</th>\n",
+       "      <th id=\"T_3401b_level0_col1\" class=\"col_heading level0 col1\" >DOC_NAME</th>\n",
+       "      <th id=\"T_3401b_level0_col2\" class=\"col_heading level0 col2\" >CHUNKED_ID</th>\n",
+       "      <th id=\"T_3401b_level0_col3\" class=\"col_heading level0 col3\" >문서내용</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_ae4e6_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_ae4e6_row0_col0\" class=\"data row0 col0\" >10-3</td>\n",
-       "      <td id=\"T_ae4e6_row0_col1\" class=\"data row0 col1\" >하반기관세대응수출금융설명회개최</td>\n",
-       "      <td id=\"T_ae4e6_row0_col2\" class=\"data row0 col2\" >3</td>\n",
-       "      <td id=\"T_ae4e6_row0_col3\" class=\"data row0 col3\" >등 미국 관세대응에 필요한 자금지원 방안도 종합적으로 안내되었다.지원단은 앞으로도 우리 수출기업들이 美 통상정책의 불확실성에 신속하고 유연하게 대응할 수 있도록 통합적인 정보 제공을 강화하고 현장과의소통을 더욱 확대 해나갈 계획이다.담당 부서원스톱 수출·수주지원단금융재정지원팀책임자팀 장 이명진(02-6000-5785)담당자사무관김선아임동욱(seonahkim@korea.kr)(ldu19@korea.kr)보도자료참고관세대응 수출기업 금융지원 프로그램 설명회□(목적)불확실한통상환경속에서중소‧중견기업대상수출금융·보증등맞춤형수출금융정보제공및활용독려추진ㅇ6개정책금융기관*이공동으로참여하는수출금융설명회로,기업수요에맞는금융지원정보를효율적‧유기적으로제공</td>\n",
+       "      <th id=\"T_3401b_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_3401b_row0_col0\" class=\"data row0 col0\" >10-3</td>\n",
+       "      <td id=\"T_3401b_row0_col1\" class=\"data row0 col1\" >하반기관세대응수출금융설명회개최</td>\n",
+       "      <td id=\"T_3401b_row0_col2\" class=\"data row0 col2\" >3</td>\n",
+       "      <td id=\"T_3401b_row0_col3\" class=\"data row0 col3\" >등 미국 관세대응에 필요한 자금지원 방안도 종합적으로 안내되었다.지원단은 앞으로도 우리 수출기업들이 美 통상정책의 불확실성에 신속하고 유연하게 대응할 수 있도록 통합적인 정보 제공을 강화하고 현장과의소통을 더욱 확대 해나갈 계획이다.담당 부서원스톱 수출·수주지원단금융재정지원팀책임자팀 장 이명진(02-6000-5785)담당자사무관김선아임동욱(seonahkim@korea.kr)(ldu19@korea.kr)보도자료참고관세대응 수출기업 금융지원 프로그램 설명회□(목적)불확실한통상환경속에서중소‧중견기업대상수출금융·보증등맞춤형수출금융정보제공및활용독려추진ㅇ6개정책금융기관*이공동으로참여하는수출금융설명회로,기업수요에맞는금융지원정보를효율적‧유기적으로제공</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f0742717230>"
+       "<pandas.io.formats.style.Styler at 0x7f112ae3c440>"
       ]
      },
      "metadata": {},
