--- a/similarity_search/user_functions.ipynb
+++ b/similarity_search/user_functions.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "694fc6da-1351-439b-9450-162d2b28409d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/jupyterhub/vector_env/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import oracledb\n",
     "import oml, re\n",
@@ -71,19 +80,34 @@
     "    cursor.execute(sql)\n",
     "    result = \"complete commit for DDL\"\n",
     "    return result\n",
-    "\n",
-    "def clean_text(val):\n",
+    "def clean_text1(val):\n",
     "    if isinstance(val, str):\n",
     "        return re.sub(r'[^가-힣a-zA-Z0-9\\s]', '', val)\n",
     "    return val\n",
-    "\n",
+    "def clean_text2(text: str) -> str:\n",
+    "    \"\"\"\n",
+    "    - 한글, 영문, 숫자, 공백, 줄바꿈 유지\n",
+    "    - 기타 특수문자 제거\n",
+    "    \"\"\"\n",
+    "    text = re.sub(r\"[^가-힣a-zA-Z0-9\\s\\n]\", \" \", text)\n",
+    "    text = re.sub(r\"[ \\t]+\", \" \", text)      # 다중 공백 정리\n",
+    "    text = re.sub(r\"\\n{3,}\", \"\\n\\n\", text)   # 과도한 줄바꿈 정리\n",
+    "    return text.strip()\n",
     "def img_show(img):\n",
     "    input_img = Image.open(img)\n",
     "    plt.figure(figsize=(5, 4))\n",
     "    plt.imshow(input_img)\n",
     "    plt.axis('off')\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3be90bf0-ae59-492b-8ad2-fb3020bf78f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
