--- a/similarity_search/2-2.RAG_Table.ipynb
+++ b/similarity_search/2-2.RAG_Table.ipynb
@@ -19,63 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "790f349b-d3af-4a79-b842-d5ba99e1113f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/jupyterhub/vector_env/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PRODUCT</th>\n",
-       "      <th>VERSION_FULL</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Oracle AI Database 26ai Free</td>\n",
-       "      <td>23.26.0.0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        PRODUCT VERSION_FULL\n",
-       "0  Oracle AI Database 26ai Free  23.26.0.0.0"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "# 파이썬 라이브러리 로딩 및 오라클 DB 접속\n",
     "import oracledb,oml\n",
@@ -108,173 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "49d0a206-a125-430b-93eb-b515131f8006",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "벡터 컬럼 초기화 완료\n",
-      "벡터 인덱스 삭제\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>보도번호</th>\n",
-       "      <th>부처명</th>\n",
-       "      <th>보도제목</th>\n",
-       "      <th>주무부서</th>\n",
-       "      <th>보도일자</th>\n",
-       "      <th>EMBED_VECTOR</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12923</td>\n",
-       "      <td>국방부</td>\n",
-       "      <td>2025년도 군무원 채용 필기시험 전국에서 시행</td>\n",
-       "      <td>인사기획관실 군무원채용팀</td>\n",
-       "      <td>2025-07-04</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>12924</td>\n",
-       "      <td>국방부</td>\n",
-       "      <td>추서 예우 강화, 추서 진급된 계급 따라 유족급여 올린다</td>\n",
-       "      <td>보건복지관실 군인재해보상과</td>\n",
-       "      <td>2025-07-08</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12925</td>\n",
-       "      <td>국방부</td>\n",
-       "      <td>“재난이 곧 안보상황”산불과의 전투, 국방부-산림청이 합동 대응한다</td>\n",
-       "      <td>군수관리관실 재난안전관리과</td>\n",
-       "      <td>2025-07-09</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>12926</td>\n",
-       "      <td>국방부</td>\n",
-       "      <td>민관군이 첨단기술로 함께 그리는 국방 장비관리의 미래</td>\n",
-       "      <td>군수관리관실 장비관리과</td>\n",
-       "      <td>2025-07-10</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12927</td>\n",
-       "      <td>국방부</td>\n",
-       "      <td>미국 B-52H 전략폭격기 전개 하 한미일 공중훈련 시행</td>\n",
-       "      <td>국제정책관실 미국정책과</td>\n",
-       "      <td>2025-07-11</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>12928</td>\n",
-       "      <td>국방부</td>\n",
-       "      <td>2025 일본 방위백서 기술내용 관련 항의</td>\n",
-       "      <td>국제정책관실 동북아정책과</td>\n",
-       "      <td>2025-07-15</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>12929</td>\n",
-       "      <td>국방부</td>\n",
-       "      <td>국방부와 금융감독원이 함께 하는 국방재정담당자 금융연수 첫 실시</td>\n",
-       "      <td>기획조정실 재정회계과</td>\n",
-       "      <td>2025-07-17</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>12930</td>\n",
-       "      <td>국방부</td>\n",
-       "      <td>사이버작전사령부, 사이버 플래그 훈련 참가</td>\n",
-       "      <td>사이버작전사령부 기획과</td>\n",
-       "      <td>2025-07-21</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>12931</td>\n",
-       "      <td>국방부</td>\n",
-       "      <td>발굴된 6·25전사자 유품 보존처리… 문화유산 가치 확립에 첫걸음</td>\n",
-       "      <td>유해발굴감식단 계획운영처</td>\n",
-       "      <td>2025-07-22</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>12932</td>\n",
-       "      <td>국방부</td>\n",
-       "      <td>한미 군수협력위원회, 국내 방산업체 참여 MRO 시범사업 대상으로 시누크(CH-47...</td>\n",
-       "      <td>자원관리실 군수기획과</td>\n",
-       "      <td>2025-07-22</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    보도번호  부처명                                               보도제목  \\\n",
-       "0  12923  국방부                         2025년도 군무원 채용 필기시험 전국에서 시행   \n",
-       "1  12924  국방부                    추서 예우 강화, 추서 진급된 계급 따라 유족급여 올린다   \n",
-       "2  12925  국방부              “재난이 곧 안보상황”산불과의 전투, 국방부-산림청이 합동 대응한다   \n",
-       "3  12926  국방부                      민관군이 첨단기술로 함께 그리는 국방 장비관리의 미래   \n",
-       "4  12927  국방부                    미국 B-52H 전략폭격기 전개 하 한미일 공중훈련 시행   \n",
-       "5  12928  국방부                            2025 일본 방위백서 기술내용 관련 항의   \n",
-       "6  12929  국방부                국방부와 금융감독원이 함께 하는 국방재정담당자 금융연수 첫 실시   \n",
-       "7  12930  국방부                            사이버작전사령부, 사이버 플래그 훈련 참가   \n",
-       "8  12931  국방부               발굴된 6·25전사자 유품 보존처리… 문화유산 가치 확립에 첫걸음   \n",
-       "9  12932  국방부  한미 군수협력위원회, 국내 방산업체 참여 MRO 시범사업 대상으로 시누크(CH-47...   \n",
-       "\n",
-       "             주무부서         보도일자 EMBED_VECTOR  \n",
-       "0   인사기획관실 군무원채용팀   2025-07-04         None  \n",
-       "1  보건복지관실 군인재해보상과   2025-07-08         None  \n",
-       "2  군수관리관실 재난안전관리과   2025-07-09         None  \n",
-       "3    군수관리관실 장비관리과   2025-07-10         None  \n",
-       "4    국제정책관실 미국정책과   2025-07-11         None  \n",
-       "5   국제정책관실 동북아정책과   2025-07-15         None  \n",
-       "6     기획조정실 재정회계과   2025-07-17         None  \n",
-       "7    사이버작전사령부 기획과   2025-07-21         None  \n",
-       "8   유해발굴감식단 계획운영처  2025-07-22          None  \n",
-       "9     자원관리실 군수기획과   2025-07-22         None  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "# 벡터 컬럼 초기화 및 데이터 조회\n",
     "\n",
@@ -306,21 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ce9afead-27b8-4f5e-ac59-011c8891f841",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "모델 MULTILINGUAL_E5_SMALL with oracle 이용하여 임베딩 생성중입니다......\n",
-      "임베딩 시간(임베딩 + 테이블 저장) : 1.3421423435211182\n",
-      "임베딩 완료\n",
-      "벡터 인덱싱 완료\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "# \"TITLE\"(문서제목) 값 임베딩 \n",
     "# 임베딩 모델 : PARAPHRASE_MULTILINGUAL_MPNET_BASE_V2\n",
@@ -382,54 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c0deeb65-573e-4e8c-9873-fc3533cca2c6",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "질문 입력 예: 국방부에서 보도한 2025년도 군무원 채용 필기시험 보도자료 찾아줘 \n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "찾으실 문장을 입력하세요:   국방부에서 보도한 2025년도 군무원 채용 필기시험 보도자료 찾아줘 \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "벡터검색중입니다......\n",
-      " 벡터검색 시간(질문 임베딩 + 벡터쿼리 실행): 0.054759979248046875\n",
-      "-----------------------------------------------------------\n",
-      "백터검색 결과를 이용하여 langchain-ollama 프롬프트를 생성했습니다.\n",
-      "프롬프트\n",
-      " \n",
-      "CONTEXT 정보에서만 답변을 작성해주세요.\n",
-      "답변은 보도제목, 보도번호, 주무부처, 주무부서, 작성일자를 포함하세요. 답변출력에는 유사도가 가장 높은 것 하나를 출력하세요.\n",
-      "CONTEXT : {context}\n",
-      "[INST]QUESTION : {question}[/INST]\n",
-      "\n",
-      "llama3.2가 답변을 생성중입니다......\n",
-      "--------------------------------------------------------------\n",
-      "LLM 응답\n",
-      "보도번호: 12923\n",
-      "보도제목: 2025년도 군무원 채용 필기시험 전국에서 시행\n",
-      "작성일자: 2025-07-04\n",
-      "주무부처: 국방부\n",
-      "주무부서: 인사기획관실 군무원채용팀\n",
-      "\n",
-      "유사도는 0.95로, 가장 높은 유사도는 인사기획관실 군무원채용팀입니다.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# RAG 실행\n",
     "## LLM : llama3.2 on ollama\n",
