--- a/similarity_search/3.Hybrid_search.ipynb
+++ b/similarity_search/3.Hybrid_search.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "## 1. 하이브리드 인덱스 준비\n",
     "\n",
-    "- github 참조 : "
+    "- github 참조 : https://github.com/kairkowy/handon-labs-for-vector-search/blob/main/similarity_search/%EC%98%A4%EB%9D%BC%ED%81%B4%20%EB%B2%A1%ED%84%B0%20hybrid%20indexing%20%EC%82%AC%EC%9A%A9%20%EB%B0%A9%EB%B2%95.md"
    ]
   },
   {
