--- a/similarity_search/2-1.RAG_DOC.ipynb
+++ b/similarity_search/2-1.RAG_DOC.ipynb
@@ -228,7 +228,7 @@
      "text": [
       "1.공통질문 : 공공기관 소프트웨어 분리발주 대상 사업에는 어떤 것들이 있나요?\n",
       "2.Oracle's API for ollama :\n",
-      "{\"provider\":\"ollama\", \"host\":\"local\", \"url\":\"http://service-ollama:11434/api/generate\", \"model\":\"llama3.2\", \"temperature\":\"0\"}\n",
+      "{\"provider\":\"ollama\", \"host\":\"local\", \"url\":\"http://service-ollama:11434/api/generate\", \"model\":\"llama3.2\", \"temperature\":\"0.1\",\"transfer_timeout\":\"300\" }\n",
       "3.벡터쿼리 : \n",
       "SELECT T.문서번호,T.청크ID,T.문서내용\n",
       "FROM rag_tbl_v T\n",
